--- a/ShopManage/WebRoot/css/stockmanage.css
+++ b/ShopManage/WebRoot/css/stockmanage.css
@@ -18,14 +18,16 @@ body{
 }
 .my-container{
 	background-color:white;
-	opacity:0.8;
+	opacity:0.95;
+	border-radius:5px;
+	box-shadow:5px 5px 5px rgba(0,0,0,0.5);
 }
 
 .my-top{
 	margin-top:1%;
 	height:10%;
 	width:100%;
-	border:1px solid gray;
+	border:1px solid green;
 	text-align:center;
 }
 
@@ -41,21 +43,60 @@ body{
 	text-align:center;
 	padding-top:10px;
 }
+
+a{
+	text-decoration:none;
+}
+a:focus{
+	text-decoration:none;
+}
+
+th{
+	text-align:center;
+	user-select:none;
+}
 .row li:hover{
 	cursor:pointer;
 }
 .my-mainbody{
 	width:100%;
 	height:80%;
-	border:1px solid gray;
+	border:1px solid green;
 	margin-top:1%;
+	overflow:scroll;
+	border-radius:5px;
+	
+	overflow-x:hidden;
 }
 .my-a-active{
 	font-size:20px;
 	color:green !important;
 }
 
-@media screen and (max-width:450px){
+.my-form-group{
+	margin-top:10px;
+}
+
+
+/*滚动条样式*/
+.my-mainbody::-webkit-scrollbar {/*滚动条整体样式*/
+	width: 4px;     /*高宽分别对应横竖滚动条的尺寸*/
+	height: 4px;
+}
+.my-mainbody::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
+	border-radius: 5px;
+	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+	background: rgba(0,0,0,0.2);
+}
+.my-mainbody::-webkit-scrollbar-track {/*滚动条里面轨道*/
+	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+	border-radius: 0;	
+	background: rgba(0,0,0,0.1);
+}
+
+
+        
+@media screen and (max-width:500px){
 	.my-container{
 		display:none;
 	}
