--- a/ShopManage/WebRoot/css/stockmanage.css
+++ b/ShopManage/WebRoot/css/stockmanage.css
@@ -17,6 +17,7 @@ body{
 	width:100%;
 }
 .my-container{
+	display:none;
 	background-color:white;
 	opacity:0.95;
 	border-radius:5px;
@@ -133,8 +134,25 @@ td:hover,th:hover{
 	background: rgba(0,0,0,0.1);
 }
 
+.return-collect{
+	 opacity:0.8;
+	 border-radius:5px;
+	 position:absolute;
+	 left:10px;
+	 top:10px;
+	 padding:2px;
+}
+
+.return-collect:hover{
+	cursor:pointer;
+	color:white;
+}
+
 @media screen and (max-width:500px){
 	.my-container{
+		display:none;
+	}
+	.return-collect{
 		display:none;
 	}
 }
