--- a/ShopManage/WebRoot/css/membermanage.css
+++ b/ShopManage/WebRoot/css/membermanage.css
@@ -1,5 +1,109 @@
 body{
-	background-image: url(../image/stockmanage.jpg);
+	background-image: url(../image/memberbackground.jpg);
 	background-size:100% 100%;
 	background-repeat:no-repeat;	
+}
+
+.my-container{
+	display:none;
+	background-color:white;
+	opacity:0.95;
+	border-radius:5px;
+	box-shadow:5px 5px 5px rgba(0,0,0,0.5);
+}
+
+.return-collect{
+	 opacity:0.8;
+	 border-radius:5px;
+	 position:absolute;
+	 left:10px;
+	 top:10px;
+	 padding:2px;
+	 transition:color 1s linear;
+}
+
+.return-collect:hover{
+	cursor:pointer;
+	color:white;
+}
+
+.my-top{
+	margin-top:1%;
+	height:10%;
+	width:100%;
+	border:1px solid #B0E0E6;
+	text-align:center;
+}
+
+.my-row{
+	margin-left:0px;
+	margin-right:0px;
+	
+}
+.row li{
+	
+	height:10%;
+	display:inline-block;
+	text-align:center;
+	padding-top:10px;
+}
+
+a{
+	text-decoration:none;
+}
+a:focus{
+	text-decoration:none;
+}
+.row li:hover{
+	cursor:pointer;
+}
+.my-a-active{
+	font-size:20px;
+	transition:font-size 0.5s linear,color 1s linear;
+	color:#B0E0E6 !important;
+}
+
+.my-mainbody{
+	width:100%;
+	height:80%;
+	border:1px solid #B0E0E6;
+	margin-top:1%;
+	overflow:scroll;
+	border-radius:5px;
+	
+	overflow-x:hidden;
+}
+/*滚动条样式*/
+.my-mainbody::-webkit-scrollbar {/*滚动条整体样式*/
+	width: 4px;     /*高宽分别对应横竖滚动条的尺寸*/
+	height: 4px;
+}
+.my-mainbody::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
+	border-radius: 5px;
+	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+	background: rgba(0,0,0,0.2);
+}
+.my-mainbody::-webkit-scrollbar-track {/*滚动条里面轨道*/
+	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+	border-radius: 0;	
+	background: rgba(0,0,0,0.1);
+}
+
+td,th{
+	font-size:12px;
+	text-align:center;
+}
+
+td:hover,th:hover{
+	cursor:pointer;
+}
+
+
+@media screen and (max-width:500px){
+	.my-container{
+		display:none;
+	}
+	.return-collect{
+		display:none;
+	}
 }
