--- a/ShopManage/WebRoot/css/membermanage.css
+++ b/ShopManage/WebRoot/css/membermanage.css
@@ -98,6 +98,37 @@ td:hover,th:hover{
 	cursor:pointer;
 }
 
+.shopDivMask{
+	height:70%;
+	width:50%;
+	position:absolute;
+	left:25%;
+	top:15%;
+	overflow:scroll;
+	background-color:white;
+	z-index:100;
+	border-radius: 5px;	
+	overflow-x:hidden;
+	box-shadow:5px 5px 5px rgba(0,0,0,0.5);
+	display:none;
+}
+
+/*滚动条样式*/
+.shopDivMask::-webkit-scrollbar {/*滚动条整体样式*/
+	width: 4px;     /*高宽分别对应横竖滚动条的尺寸*/
+	height: 4px;
+}
+.shopDivMask::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
+	border-radius: 5px;
+	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+	background: rgba(0,0,0,0.2);
+}
+.shopDivMask::-webkit-scrollbar-track {/*滚动条里面轨道*/
+	-webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+	border-radius: 0;	
+	background: rgba(0,0,0,0.1);
+}
+
 
 @media screen and (max-width:500px){
 	.my-container{
